// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with no message or type 1`] = `<View />`;

exports[`should match snapshot with type danger 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 3,
        "elevation": 5,
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
        "padding": 20,
        "shadowColor": "#282828",
        "shadowOffset": Object {
          "height": 2.5,
          "width": 2.5,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 5,
      },
      Object {
        "backgroundColor": "#FF6961",
      },
    ]
  }
>
  <MaterialIcon
    name="error"
    size={20}
    style={
      Object {
        "alignSelf": "center",
        "marginLeft": 0,
        "marginRight": 20,
        "marginTop": 2,
      }
    }
  />
  <DefaultFont
    style={
      Object {
        "alignSelf": "center",
        "color": "#fff",
        "flex": 1,
        "fontSize": 12,
      }
    }
  >
    Message
  </DefaultFont>
  <DefaultFont
    onPress={[Function]}
    style={
      Object {
        "fontSize": 10,
        "fontWeight": "bold",
      }
    }
  >
    Stäng
  </DefaultFont>
</View>
`;

exports[`should match snapshot with type info 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 3,
        "elevation": 5,
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
        "padding": 20,
        "shadowColor": "#282828",
        "shadowOffset": Object {
          "height": 2.5,
          "width": 2.5,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 5,
      },
      Object {
        "backgroundColor": "#779ECB",
      },
    ]
  }
>
  <MaterialIcon
    name="info"
    size={20}
    style={
      Object {
        "alignSelf": "center",
        "marginLeft": 0,
        "marginRight": 20,
        "marginTop": 2,
      }
    }
  />
  <DefaultFont
    style={
      Object {
        "alignSelf": "center",
        "color": "#fff",
        "flex": 1,
        "fontSize": 12,
      }
    }
  >
    Message
  </DefaultFont>
  <DefaultFont
    onPress={[Function]}
    style={
      Object {
        "fontSize": 10,
        "fontWeight": "bold",
      }
    }
  >
    Stäng
  </DefaultFont>
</View>
`;

exports[`should match snapshot with type null 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 3,
        "elevation": 5,
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
        "padding": 20,
        "shadowColor": "#282828",
        "shadowOffset": Object {
          "height": 2.5,
          "width": 2.5,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 5,
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
>
  <DefaultFont
    style={
      Object {
        "alignSelf": "center",
        "color": "#fff",
        "flex": 1,
        "fontSize": 12,
      }
    }
  >
    Message
  </DefaultFont>
  <DefaultFont
    onPress={[Function]}
    style={
      Object {
        "fontSize": 10,
        "fontWeight": "bold",
      }
    }
  >
    Stäng
  </DefaultFont>
</View>
`;

exports[`should match snapshot with type success 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 3,
        "elevation": 5,
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
        "padding": 20,
        "shadowColor": "#282828",
        "shadowOffset": Object {
          "height": 2.5,
          "width": 2.5,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 5,
      },
      Object {
        "backgroundColor": "#77DD77",
      },
    ]
  }
>
  <MaterialIcon
    name="check-circle"
    size={20}
    style={
      Object {
        "alignSelf": "center",
        "marginLeft": 0,
        "marginRight": 20,
        "marginTop": 2,
      }
    }
  />
  <DefaultFont
    style={
      Object {
        "alignSelf": "center",
        "color": "#fff",
        "flex": 1,
        "fontSize": 12,
      }
    }
  >
    Message
  </DefaultFont>
  <DefaultFont
    onPress={[Function]}
    style={
      Object {
        "fontSize": 10,
        "fontWeight": "bold",
      }
    }
  >
    Stäng
  </DefaultFont>
</View>
`;

exports[`should match snapshot with type warning 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 3,
        "elevation": 5,
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
        "padding": 20,
        "shadowColor": "#282828",
        "shadowOffset": Object {
          "height": 2.5,
          "width": 2.5,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 5,
      },
      Object {
        "backgroundColor": "#FFB347",
      },
    ]
  }
>
  <MaterialIcon
    name="warning"
    size={20}
    style={
      Object {
        "alignSelf": "center",
        "marginLeft": 0,
        "marginRight": 20,
        "marginTop": 2,
      }
    }
  />
  <DefaultFont
    style={
      Object {
        "alignSelf": "center",
        "color": "#fff",
        "flex": 1,
        "fontSize": 12,
      }
    }
  >
    Message
  </DefaultFont>
  <DefaultFont
    onPress={[Function]}
    style={
      Object {
        "fontSize": 10,
        "fontWeight": "bold",
      }
    }
  >
    Stäng
  </DefaultFont>
</View>
`;
